--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "better-js-tools",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node --loader ts-node/esm ./src/index.ts",
+    "dev" : "node --loader ts-node/esm ./src/index.ts",
     "build" : "tsc",
-    "prostart" : "node dist/index.js"
+    "start" : "node dist/index.js"
   },
   "repository": {
     "type": "git",
