--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
         "strict": true,
         "module": "ES6",
         "moduleResolution": "node",
-        "lib": ["es2015","es2016","es2017","es2018","es2019","es2020"],
-        "target": "ES6",
+        "lib": ["es2015","es2016","es2017","es2018","es2019","es2020","ES2021"],
+        "target": "ES2021",
         "outDir": "./dist",
         "esModuleInterop": true
     },
