--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "better-js-tools",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "node --loader ts-node/esm ./src/index.ts",
-    "build" : "tsc",
-    "start" : "node dist/index.js"
+    "dev": "node --loader ts-node/esm ./src/index.ts",
+    "build": "tsc && npx webpack",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,9 @@
   "homepage": "https://github.com/Unknown123465/better-js-tools#readme",
   "type": "module",
   "devDependencies": {
-    "ts-node": "^10.9.1"
+    "clean-webpack-plugin": "^4.0.0",
+    "ts-node": "^10.9.1",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
   }
 }
